--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         Agendar demo
      </a>
 
-     <a href="mailto:contato@sway.ai" class="px-6 py-3 rounded-xl border border-white/20 hover:bg-white/10">contato@sway.ai</a>
+     <a href="mailto:contato@sway.ai" class="px-6 py-3 rounded-xl border border-white/20 hover:bg-white/10">ontato@swaybrasil.com</a>
       </div>
     </div>
   </section>
