--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta property="og:title" content="SWAY • Agent Desk com IAs Verticais" />
   <meta property="og:description" content="Acompanhe conversas em tempo real, assuma quando precisar e meça resultados. IAs especializadas por setor, prontas para produção." />
   <meta property="og:type" content="website" />
+
+    <!-- Google Tag Manager -->
+  <script>
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
+      var f=d.getElementsByTagName(s)[0], j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
+      j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+      f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','G-CVM8FMFR8R'); // <-- troque pelo seu ID
+  </script>
+  <!-- End Google Tag Manager -->
+  
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -36,6 +47,14 @@
   </style>
 </head>
 <body class="bg-slate-50 text-slate-800">
+
+  <!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=G-CVM8FMFR8R"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
   <!-- NAVBAR -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
