--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
           <a href="#faq" class="hover:text-primary-700">FAQ</a>
         </nav>
         <div class="hidden md:flex items-center gap-3">
-          <a href="#demo" class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">Ver demo</a>
+          <a href="https://www.instagram.com/sway_brasil/" 
+           target="_blank" 
+           class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">
+           Ver demo
+          </a>
+
           <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
           target="_blank" 
           class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">
@@ -90,7 +95,12 @@
         <a href="#verticais" class="hover:text-primary-700">Setores</a>
         <a href="#precos" class="hover:text-primary-700">Planos</a>
         <a href="#faq" class="hover:text-primary-700">FAQ</a>
-        <a href="#demo" class="px-4 py-2 rounded-lg border border-slate-300">Ver demo</a>
+        <a href="https://www.instagram.com/sway_brasil/" 
+           target="_blank" 
+           class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">
+           Ver demo
+        </a>
+
         <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
         target="_blank" 
         class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">
@@ -112,7 +122,12 @@
           Sua equipe foca no que importa: resolver casos estratégicos e fechar mais negócios.
         </p>
         <div class="mt-8 flex flex-wrap gap-3 justify-center">
-          <a href="#demo" class="px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft">Ver demo</a>
+          <a href="https://www.instagram.com/sway_brasil/" 
+             target="_blank" 
+             class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">
+             Ver demo
+          </a>
+
           <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
           target="_blank" 
           class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-white">
