--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="hidden md:flex items-center gap-3">
           <a href="https://www.instagram.com/sway_brasil/" 
            target="_blank" 
-           class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">
+           class="px-4 py-2 rounded-lg border border-slate-300">
            Ver demo
           </a>
 
@@ -97,7 +97,7 @@
         <a href="#faq" class="hover:text-primary-700">FAQ</a>
         <a href="https://www.instagram.com/sway_brasil/" 
            target="_blank" 
-           class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">
+           class="px-4 py-2 rounded-lg border border-slate-300">
            Ver demo
         </a>
 
