--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
   <meta property="og:description" content="Acompanhe conversas em tempo real, assuma quando precisar e meça resultados. IAs especializadas por setor, prontas para produção." />
   <meta property="og:type" content="website" />
 
-    <!-- Google Tag Manager -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CVM8FMFR8R"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-CVM8FMFR8R');
-</script>
+  <!-- FAVICONS (mais completo + cache busting) -->
+  <link rel="icon" href="/favicon.ico?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="192x192" href="./img/sway_logo-192.png?v=3">
+  <link rel="icon" type="image/png" sizes="512x512" href="./img/sway_logo-512.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/sway_logo-180.png?v=3">
+  <!-- Opcional para Safari pinned tabs (adicione o arquivo e descomente): -->
+  <!-- <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#2f8cff"> -->
+  <meta name="theme-color" content="#2f8cff">
 
-  <!-- End Google Tag Manager -->
-  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVM8FMFR8R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);} 
+    gtag('js', new Date());
+    gtag('config', 'G-CVM8FMFR8R');
+  </script>
+
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -31,13 +39,9 @@
             primary: {
               50: '#eef7ff', 100: '#d9ecff', 200: '#b6d9ff', 300: '#8ec4ff', 400: '#5aa7ff', 500: '#2f8cff', 600: '#1a6fe5', 700: '#1557b3', 800: '#0f3c80', 900: '#0a2a59'
             },
-            slate: {
-              950: '#0b1220'
-            }
+            slate: { 950: '#0b1220' }
           },
-          boxShadow: {
-            soft: '0 10px 30px rgba(2,6,23,0.08)'
-          }
+          boxShadow: { soft: '0 10px 30px rgba(2,6,23,0.08)' }
         }
       }
     }
@@ -49,13 +53,10 @@
   </style>
 </head>
 <body class="bg-slate-50 text-slate-800">
-
-  <!-- Google Tag Manager (noscript) -->
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=G-CVM8FMFR8R"
-          height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <!-- GTM noscript -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=G-CVM8FMFR8R" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
 
   <!-- NAVBAR -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200">
@@ -68,21 +69,12 @@
           <a href="#produto" class="hover:text-primary-700">Produto</a>
           <a href="#como-funciona" class="hover:text-primary-700">Como funciona</a>
           <a href="#verticais" class="hover:text-primary-700">Setores</a>
-          <a href="#precos" class="hover:text-primary-700">Planos</a>
+          <a href="#planos" class="hover:text-primary-700">Planos</a>
           <a href="#faq" class="hover:text-primary-700">FAQ</a>
         </nav>
         <div class="hidden md:flex items-center gap-3">
-          <a href="https://www.instagram.com/sway_brasil/" 
-           target="_blank" 
-           class="px-4 py-2 rounded-lg border border-slate-300">
-           Ver demo
-          </a>
-
-          <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
-          target="_blank" 
-          class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">
-          Falar com vendas
-       </a>
+          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="px-4 py-2 rounded-lg border border-slate-300">Ver demo</a>
+          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20falar%20com%20vendas%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">Falar com vendas</a>
         </div>
         <button id="btnMenu" class="md:hidden p-2 rounded-lg border border-slate-300" aria-label="Abrir menu">☰</button>
       </div>
@@ -93,52 +85,28 @@
         <a href="#produto" class="hover:text-primary-700">Produto</a>
         <a href="#como-funciona" class="hover:text-primary-700">Como funciona</a>
         <a href="#verticais" class="hover:text-primary-700">Setores</a>
-        <a href="#precos" class="hover:text-primary-700">Planos</a>
+        <a href="#planos" class="hover:text-primary-700">Planos</a>
         <a href="#faq" class="hover:text-primary-700">FAQ</a>
-        <a href="https://www.instagram.com/sway_brasil/" 
-           target="_blank" 
-           class="px-4 py-2 rounded-lg border border-slate-300">
-           Ver demo
-        </a>
-
-        <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
-        target="_blank" 
-        class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">
-        Falar com vendas
-     </a>
+        <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="px-4 py-2 rounded-lg border border-slate-300">Ver demo</a>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20falar%20com%20vendas%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">Falar com vendas</a>
       </nav>
     </div>
   </header>
 
-<!-- HERO -->
-<section class="relative hero-gradient">
+  <!-- HERO -->
+  <section class="relative hero-gradient">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-20 lg:py-28">
       <div class="flex flex-col items-center text-center">
-        <h1 class="text-3xl sm:text-5xl font-extrabold tracking-tight text-slate-900 max-w-3xl">
-          Atendimento inteligente com <span class="text-primary-600">IAs Verticais</span>
-        </h1>
-        <p class="mt-5 text-lg text-slate-600 max-w-2xl">
-          Transforme sua operação de atendimento com IAs que nunca se cansam, podem atender milhares de clientes simultaneamente e garantem agilidade em cada interação.  
-          Sua equipe foca no que importa: resolver casos estratégicos e fechar mais negócios.
-        </p>
-        <div class="mt-8 flex flex-wrap gap-3 justify-center">
-          <a href="https://www.instagram.com/sway_brasil/" 
-             target="_blank" 
-             class="px-4 py-2 rounded-lg border border-slate-300 hover:bg-slate-100">
-             Ver demo
-          </a>
-
-          <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
-          target="_blank" 
-          class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-white">
-          Falar com vendas
-       </a>
-        </div>
+        <h1 class="text-3xl sm:text-5xl font-extrabold tracking-tight text-slate-900 max-w-3xl">Atendimento inteligente com <span class="text-primary-600">IAs Verticais</span></h1>
+        <p class="mt-5 text-lg text-slate-600 max-w-2xl">Transforme sua operação de atendimento com IAs que nunca se cansam, podem atender milhares de clientes simultaneamente e garantem agilidade em cada interação. Sua equipe foca no que importa: resolver casos estratégicos e fechar mais negócios.</p>
+        <div class="mt-8 flex justify-center items-center gap-3">
+          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-slate-100">Ver demo</a>
+          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20falar%20com%20vendas%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-white">Falar com vendas</a>
+        </div>        
         <div class="mt-6 text-sm text-slate-500">Respostas em segundos • Atendimento 24/7 • Mais clientes atendidos sem aumentar equipe</div>
       </div>
     </div>
   </section>
-  
 
   <!-- PRODUTO -->
   <section id="produto" class="py-20 bg-gradient-to-b from-white to-slate-50">
@@ -178,16 +146,13 @@
     </div>
   </section>
 
-<!-- COMO FUNCIONA -->
-<section id="como-funciona" class="py-20 bg-white border-t border-slate-200">
+  <!-- COMO FUNCIONA -->
+  <section id="como-funciona" class="py-20 bg-white border-t border-slate-200">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
           <h2 class="text-2xl sm:text-4xl font-bold tracking-tight">Atenda mais clientes sem aumentar custos</h2>
-          <p class="mt-4 text-slate-600">
-            Nossa IA entende a necessidade do cliente, responde em segundos e, quando necessário, passa a conversa para sua equipe sem atrito.  
-            Isso significa mais clientes atendidos, menos tempo de espera e uma experiência que gera confiança.
-          </p>
+          <p class="mt-4 text-slate-600">Nossa IA entende a necessidade do cliente, responde em segundos e, quando necessário, passa a conversa para sua equipe sem atrito. Isso significa mais clientes atendidos, menos tempo de espera e uma experiência que gera confiança.</p>
           <ul class="mt-6 space-y-3 text-slate-700">
             <li>• Responde dúvidas frequentes automaticamente</li>
             <li>• Gera agendamentos, lembretes e follow-ups</li>
@@ -197,82 +162,80 @@
         </div>
         <div class="p-6 bg-slate-900 text-slate-50 rounded-2xl shadow-soft">
           <p class="text-lg font-semibold">Exemplo real:</p>
-          <p class="mt-3 text-slate-300 text-sm">
-            Enquanto um atendente humano consegue lidar com 3 a 5 conversas ao mesmo tempo, uma IA consegue atender centenas de clientes em paralelo, sem perda de qualidade.
-          </p>
+          <p class="mt-3 text-slate-300 text-sm">Enquanto um atendente humano consegue lidar com 3 a 5 conversas ao mesmo tempo, uma IA consegue atender centenas de clientes em paralelo, sem perda de qualidade.</p>
         </div>
       </div>
     </div>
   </section>
 
-<!-- VERTICAIS -->
-<section id="verticais" class="py-20 bg-gradient-to-b from-slate-50 to-white">
+  <!-- VERTICAIS -->
+  <section id="verticais" class="py-20 bg-gradient-to-b from-slate-50 to-white">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <h2 class="text-2xl sm:text-4xl font-bold tracking-tight text-center">IAs preparadas para o seu setor</h2>
-      <p class="mt-3 text-slate-600 text-center max-w-2xl mx-auto">Nossas soluções são adaptadas para sua área, com linguagem, fluxos e rotinas sob medida.</p>
+      <h2 class="text-2xl sm:text-4xl font-bold tracking-tight text-center">IAs para todos os segmentos</h2>
+      <p class="mt-3 text-slate-600 text-center max-w-2xl mx-auto">Totalmente personalizadas para qualquer tipo de negócio — adaptamos linguagem, fluxos e integrações ao seu processo.</p>
       <div class="mt-10 grid md:grid-cols-2 lg:grid-cols-4 gap-6">
         <div class="p-6 bg-white rounded-2xl border shadow-soft">
           <h3 class="font-semibold">Advocacia</h3>
-          <p class="mt-2 text-sm text-slate-600">Responde consultas iniciais, organiza prazos e garante atendimento rápido mesmo fora do horário comercial.</p>
+          <p class="mt-2 text-sm text-slate-600">Triagem de consultas, organização de prazos e atendimento mesmo fora do horário.</p>
         </div>
         <div class="p-6 bg-white rounded-2xl border shadow-soft">
           <h3 class="font-semibold">Clínicas</h3>
-          <p class="mt-2 text-sm text-slate-600">Marca consultas, envia lembretes e acompanha pacientes sem sobrecarregar sua recepção.</p>
+          <p class="mt-2 text-sm text-slate-600">Agendamentos, lembretes e acompanhamento sem sobrecarregar a recepção.</p>
         </div>
         <div class="p-6 bg-white rounded-2xl border shadow-soft">
           <h3 class="font-semibold">Vendas</h3>
-          <p class="mt-2 text-sm text-slate-600">Capta leads, responde em segundos e aumenta as chances de fechar negócios antes da concorrência.</p>
+          <p class="mt-2 text-sm text-slate-600">Qualificação de leads, respostas em segundos e follow-ups automáticos.</p>
         </div>
         <div class="p-6 bg-white rounded-2xl border shadow-soft">
           <h3 class="font-semibold">Suporte</h3>
-          <p class="mt-2 text-sm text-slate-600">Resolve dúvidas comuns automaticamente e libera sua equipe para casos críticos.</p>
+          <p class="mt-2 text-sm text-slate-600">Resolução de dúvidas comuns e handover imediato para casos críticos.</p>
         </div>
+      </div>
+      <div class="mt-8 text-center">
+        <p class="text-slate-600">Não viu seu setor? Nossa IA é treinada para <span class="font-semibold">qualquer negócio</span>.</p>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20uma%20IA%20personalizada%20para%20o%20meu%20neg%C3%B3cio&type=phone_number&app_absent=0" target="_blank" class="inline-block mt-3 px-5 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft">Quero uma IA personalizada</a>
       </div>
     </div>
   </section>
 
-  <!-- PREÇOS -->
-  <section id="precos" class="py-20 bg-white border-t border-slate-200">
+  <!-- PLANOS (sem preços) -->
+  <section id="planos" class="py-20 bg-white border-t border-slate-200">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <h2 class="text-2xl sm:text-4xl font-bold tracking-tight text-center">Planos simples que escalam com você</h2>
       <p class="mt-3 text-slate-600 text-center">Todos incluem inbox, CRM leve e analytics. O que muda é volume e nível de verticalização.</p>
       <div class="mt-10 grid md:grid-cols-3 gap-6">
+        <!-- Start -->
         <div class="p-8 bg-white rounded-2xl border shadow-soft">
           <h3 class="text-lg font-semibold">Start</h3>
           <p class="mt-1 text-slate-600 text-sm">1 canal, 1 IA vertical</p>
-          <div class="mt-4 text-3xl font-extrabold">R$ 550<span class="text-base font-medium text-slate-500">/mês</span></div>
           <ul class="mt-4 text-sm space-y-2">
             <li>• Até 2 usuários</li>
             <li>• 5k mensagens/mês</li>
             <li>• Suporte por e-mail</li>
           </ul>
-          <a href="#contato" class="mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50">Começar</a>
+          <a data-plan="Start" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Start%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50">Quero o Start</a>
         </div>
+        <!-- Pro -->
         <div class="p-8 bg-slate-900 text-white rounded-2xl shadow-soft ring-2 ring-primary-500">
           <h3 class="text-lg font-semibold">Pro</h3>
           <p class="mt-1 text-slate-300 text-sm">2 canais, 2 IAs verticais</p>
-          <div class="mt-4 text-3xl font-extrabold">R$ 1.290<span class="text-base font-medium text-slate-300">/mês</span></div>
           <ul class="mt-4 text-sm space-y-2 text-slate-200">
             <li>• Até 8 usuários</li>
             <li>• 20k mensagens/mês</li>
             <li>• Suporte prioritário</li>
           </ul>
-          <a href="#contato" class="mt-6 inline-block px-5 py-3 rounded-xl bg-primary-600 hover:bg-primary-500">Assinar Pro</a>
+          <a data-plan="Pro" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Pro%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="mt-6 inline-block px-5 py-3 rounded-xl bg-primary-600 hover:bg-primary-500">Quero o Pro</a>
         </div>
+        <!-- Enterprise -->
         <div class="p-8 bg-white rounded-2xl border shadow-soft">
           <h3 class="text-lg font-semibold">Enterprise</h3>
           <p class="mt-1 text-slate-600 text-sm">Omnichannel + múltiplas IAs</p>
-          <div class="mt-4 text-3xl font-extrabold">Sob consulta</div>
           <ul class="mt-4 text-sm space-y-2">
             <li>• Usuários ilimitados</li>
             <li>• SLA e integrações</li>
             <li>• Onboarding assistido</li>
           </ul>
-          <a href="https://api.whatsapp.com/send/?phone=556198431746&text&type=phone_number&app_absent=0" 
-          target="_blank" 
-          class="mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50">
-          Falar com vendas
-       </a>
+          <a data-plan="Enterprise" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Enterprise%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50">Quero o Enterprise</a>
         </div>
       </div>
     </div>
@@ -309,13 +272,8 @@
       <h2 class="text-2xl sm:text-4xl font-bold tracking-tight">Pronto para operar IAs verticais de verdade?</h2>
       <p class="mt-3 text-slate-300">Agende uma demo e veja como supervisionar a IA, assumir conversas críticas e acompanhar métricas de ponta a ponta.</p>
       <div class="mt-8 flex flex-wrap gap-3 justify-center">
-        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Olá%2C%20quero%20agendar%20uma%20demo%20da%20plataforma%20SWAY&type=phone_number&app_absent=0" 
-        target="_blank" 
-        class="px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft">
-        Agendar demo
-     </a>
-
-     <a href="mailto:contato@sway.ai" class="px-6 py-3 rounded-xl border border-white/20 hover:bg-white/10">contato@swaybrasil.com</a>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20demo%20da%20plataforma%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft">Agendar demo</a>
+        <a href="mailto:contato@swaybrasil.com" class="px-6 py-3 rounded-xl border border-white/20 hover:bg-white/10">contato@swaybrasil.com</a>
       </div>
     </div>
   </section>
@@ -346,6 +304,14 @@
           if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth'}); }
         }
       })
+    });
+
+    // GTM event de clique nos planos (opcional)
+    document.querySelectorAll('[data-plan]')?.forEach(el => {
+      el.addEventListener('click', () => {
+        const plan = el.getAttribute('data-plan');
+        try { gtag('event', 'select_plan', { plan }); } catch(_) {}
+      });
     });
   </script>
 </body>
