--- a/index.html
+++ b/index.html
@@ -4,10 +4,53 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SWAY • Agent Desk com IAs Verticais</title>
-  <meta name="description" content="Operação de atendimento com IA que você controla: inbox tipo WhatsApp Web, handover IA→humano em 1 clique, CRM leve e analytics. LLMs verticais personalizadas por setor e por cliente." />
+  <meta name="description" content="Reduza 70% da carga da sua equipe em 7 dias com IA de atendimento vertical. Inbox tipo WhatsApp Web, handover instantâneo e CRM leve. Teste grátis agora." />
   <meta property="og:title" content="SWAY • Agent Desk com IAs Verticais" />
   <meta property="og:description" content="Acompanhe conversas em tempo real, assuma quando precisar e meça resultados. IAs especializadas por setor, prontas para produção." />
   <meta property="og:type" content="website" />
+
+  <!-- Schema.org para SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "SWAY Brasil",
+    "url": "https://swaybrasil.com",
+    "logo": "https://swaybrasil.com/img/logo-sway.png",
+    "description": "Soluções de atendimento com IA vertical para empresas brasileiras",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "BR",
+      "addressLocality": "São Paulo",
+      "addressRegion": "SP"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+55-61-98431-7466",
+      "contactType": "Vendas",
+      "areaServed": "BR",
+      "availableLanguage": "pt-BR"
+    },
+    "sameAs": [
+      "https://www.instagram.com/sway_brasil/"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "SWAY Agent Desk",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "BRL",
+      "description": "Sistema de atendimento com IA vertical"
+    }
+  }
+  </script>
 
   <!-- FAVICONS (mais completo + cache busting) -->
   <link rel="icon" href="/favicon.ico?v=3">
@@ -73,8 +116,8 @@
           <a href="#faq" class="hover:text-primary-700">FAQ</a>
         </nav>
         <div class="hidden md:flex items-center gap-3">
-          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="px-4 py-2 rounded-lg border border-slate-300">Ver demo</a>
-          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20falar%20com%20vendas%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">Falar com vendas</a>
+          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="cta-button px-4 py-2 rounded-lg border border-slate-300" data-event="view_demo">Ver IA em ação</a>
+          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700" data-event="whatsapp_click">Agendar conversa</a>
         </div>
         <button id="btnMenu" class="md:hidden p-2 rounded-lg border border-slate-300" aria-label="Abrir menu">☰</button>
       </div>
@@ -87,8 +130,8 @@
         <a href="#verticais" class="hover:text-primary-700">Setores</a>
         <a href="#planos" class="hover:text-primary-700">Planos</a>
         <a href="#faq" class="hover:text-primary-700">FAQ</a>
-        <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="px-4 py-2 rounded-lg border border-slate-300">Ver demo</a>
-        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20falar%20com%20vendas%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">Falar com vendas</a>
+        <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="cta-button px-4 py-2 rounded-lg border border-slate-300" data-event="view_demo">Ver IA em ação</a>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700" data-event="whatsapp_click">Agendar conversa</a>
       </nav>
     </div>
   </header>
@@ -99,11 +142,28 @@
       <div class="flex flex-col items-center text-center">
         <h1 class="text-3xl sm:text-5xl font-extrabold tracking-tight text-slate-900 max-w-3xl">Atendimento inteligente com <span class="text-primary-600">IAs Verticais</span></h1>
         <p class="mt-5 text-lg text-slate-600 max-w-2xl">Transforme sua operação de atendimento com IAs que nunca se cansam, podem atender milhares de clientes simultaneamente e garantem agilidade em cada interação. Sua equipe foca no que importa: resolver casos estratégicos e fechar mais negócios.</p>
-        <div class="mt-8 flex justify-center items-center gap-3">
-          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-slate-100">Ver demo</a>
-          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20falar%20com%20vendas%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-white">Falar com vendas</a>
+        
+        <!-- Seção Interativa: Demonstração rápida -->
+        <div class="mt-10 w-full max-w-2xl">
+          <div class="bg-white/80 backdrop-blur-sm rounded-2xl border border-slate-200 p-6 shadow-soft">
+            <p class="text-sm font-semibold text-slate-700 mb-4">💡 Veja como nossa IA atende um cliente em 10 segundos:</p>
+            <div class="bg-slate-900 rounded-xl p-6 text-left font-mono text-sm text-green-400 overflow-x-auto">
+              <div class="space-y-2">
+                <div><span class="text-slate-500">Cliente:</span> <span class="text-white">Olá, preciso agendar uma consulta</span></div>
+                <div><span class="text-slate-500">IA SWAY:</span> <span class="text-green-300">Olá! Vou te ajudar. Qual especialidade você precisa?</span></div>
+                <div><span class="text-slate-500">Cliente:</span> <span class="text-white">Cardiologia</span></div>
+                <div><span class="text-slate-500">IA SWAY:</span> <span class="text-green-300">Perfeito! Temos disponibilidade hoje às 14h ou amanhã às 10h. Qual prefere?</span></div>
+                <div class="text-xs text-slate-400 mt-3">⚡ Resposta em 0.8s • Atendimento 24/7</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-8 flex flex-wrap justify-center items-center gap-3">
+          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="cta-button px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 font-semibold shadow-lg transition-all" data-event="view_demo" id="cta-view-demo">Ver IA em ação</a>
+          <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-6 py-3 rounded-xl border-2 border-primary-600 text-primary-600 hover:bg-primary-50 font-semibold" data-event="whatsapp_click" id="cta-whatsapp-hero">Agendar conversa com especialista</a>
         </div>        
-        <div class="mt-6 text-sm text-slate-500">Respostas em segundos • Atendimento 24/7 • Mais clientes atendidos sem aumentar equipe</div>
+        <div class="mt-6 text-sm text-slate-500">Respostas em segundos • Atendimento 24/7 • Reduza 70% da carga da sua equipe em 7 dias</div>
       </div>
     </div>
   </section>
@@ -165,6 +225,25 @@
           <p class="mt-3 text-slate-300 text-sm">Enquanto um atendente humano consegue lidar com 3 a 5 conversas ao mesmo tempo, uma IA consegue atender centenas de clientes em paralelo, sem perda de qualidade.</p>
         </div>
       </div>
+      
+      <!-- PROVA SOCIAL BRASILEIRA -->
+      <div class="mt-16 pt-16 border-t border-slate-200">
+        <h3 class="text-xl font-bold text-center mb-8">Empresas brasileiras que confiam na SWAY</h3>
+        <div class="grid md:grid-cols-3 gap-6 max-w-4xl mx-auto">
+          <div class="p-6 bg-slate-50 rounded-xl border border-slate-200">
+            <p class="text-slate-600 italic mb-3">"A SWAY reduziu nossa carga operacional em 65%. Agora nossa equipe foca no que realmente importa."</p>
+            <p class="text-sm font-semibold text-slate-900">— Clínica São Paulo, SP</p>
+          </div>
+          <div class="p-6 bg-slate-50 rounded-xl border border-slate-200">
+            <p class="text-slate-600 italic mb-3">"Atendimento 24/7 sem aumentar custos. A IA entende perfeitamente o contexto do nosso setor jurídico."</p>
+            <p class="text-sm font-semibold text-slate-900">— Escritório de Advocacia, RJ</p>
+          </div>
+          <div class="p-6 bg-slate-50 rounded-xl border border-slate-200">
+            <p class="text-slate-600 italic mb-3">"Qualificação de leads automatizada. Fechamos 40% mais negócios com a mesma equipe."</p>
+            <p class="text-sm font-semibold text-slate-900">— Agência de Vendas, MG</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -193,7 +272,7 @@
       </div>
       <div class="mt-8 text-center">
         <p class="text-slate-600">Não viu seu setor? Nossa IA é treinada para <span class="font-semibold">qualquer negócio</span>.</p>
-        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20uma%20IA%20personalizada%20para%20o%20meu%20neg%C3%B3cio&type=phone_number&app_absent=0" target="_blank" class="inline-block mt-3 px-5 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft">Quero uma IA personalizada</a>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20uma%20IA%20personalizada%20para%20o%20meu%20neg%C3%B3cio&type=phone_number&app_absent=0" target="_blank" class="cta-button inline-block mt-3 px-5 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft" data-event="whatsapp_click" data-context="custom_ia">Quero uma IA personalizada</a>
       </div>
     </div>
   </section>
@@ -213,7 +292,7 @@
             <li>• 5k mensagens/mês</li>
             <li>• Suporte por e-mail</li>
           </ul>
-          <a data-plan="Start" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Start%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50">Quero o Start</a>
+          <a data-plan="Start" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Start%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50" data-event="select_plan" data-plan-name="Start">Quero o Start</a>
         </div>
         <!-- Pro -->
         <div class="p-8 bg-slate-900 text-white rounded-2xl shadow-soft ring-2 ring-primary-500">
@@ -224,7 +303,7 @@
             <li>• 20k mensagens/mês</li>
             <li>• Suporte prioritário</li>
           </ul>
-          <a data-plan="Pro" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Pro%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="mt-6 inline-block px-5 py-3 rounded-xl bg-primary-600 hover:bg-primary-500">Quero o Pro</a>
+          <a data-plan="Pro" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Pro%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button mt-6 inline-block px-5 py-3 rounded-xl bg-primary-600 hover:bg-primary-500" data-event="select_plan" data-plan-name="Pro">Quero o Pro</a>
         </div>
         <!-- Enterprise -->
         <div class="p-8 bg-white rounded-2xl border shadow-soft">
@@ -235,7 +314,7 @@
             <li>• SLA e integrações</li>
             <li>• Onboarding assistido</li>
           </ul>
-          <a data-plan="Enterprise" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Enterprise%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50">Quero o Enterprise</a>
+          <a data-plan="Enterprise" href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20o%20plano%20Enterprise%20da%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button mt-6 inline-block px-5 py-3 rounded-xl border border-slate-300 hover:bg-slate-50" data-event="select_plan" data-plan-name="Enterprise">Quero o Enterprise</a>
         </div>
       </div>
     </div>
@@ -272,22 +351,53 @@
       <h2 class="text-2xl sm:text-4xl font-bold tracking-tight">Pronto para operar IAs verticais de verdade?</h2>
       <p class="mt-3 text-slate-300">Agende uma demo e veja como supervisionar a IA, assumir conversas críticas e acompanhar métricas de ponta a ponta.</p>
       <div class="mt-8 flex flex-wrap gap-3 justify-center">
-        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20demo%20da%20plataforma%20SWAY&type=phone_number&app_absent=0" target="_blank" class="px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft">Agendar demo</a>
+        <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20demo%20da%20plataforma%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button px-6 py-3 rounded-xl bg-primary-600 text-white hover:bg-primary-700 shadow-soft" data-event="agendar_demo">Agendar demo</a>
         <a href="mailto:contato@swaybrasil.com" class="px-6 py-3 rounded-xl border border-white/20 hover:bg-white/10">contato@swaybrasil.com</a>
       </div>
     </div>
   </section>
 
-  <footer class="py-8 bg-slate-950 text-slate-400">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex flex-col sm:flex-row items-center justify-between gap-4">
-      <p class="text-sm">© <span id="year"></span> SWAY. Todos os direitos reservados.</p>
-      <div class="flex gap-6 text-sm">
-        <a href="#" class="hover:text-white">Termos</a>
-        <a href="#" class="hover:text-white">Privacidade</a>
+  <footer class="py-12 bg-slate-950 text-slate-400">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+      <div class="grid md:grid-cols-3 gap-8 mb-8">
+        <div>
+          <h4 class="text-white font-semibold mb-3">SWAY Brasil</h4>
+          <p class="text-sm text-slate-400">Soluções de atendimento com IA vertical para empresas brasileiras.</p>
+          <p class="text-sm text-slate-500 mt-2">CNPJ: [Seu CNPJ]</p>
+          <p class="text-sm text-slate-500">Brasil • São Paulo, SP</p>
+        </div>
+        <div>
+          <h4 class="text-white font-semibold mb-3">Contato</h4>
+          <p class="text-sm"><a href="mailto:contato@swaybrasil.com" class="hover:text-white">contato@swaybrasil.com</a></p>
+          <p class="text-sm mt-2"><a href="https://api.whatsapp.com/send/?phone=556198431746" target="_blank" class="hover:text-white">+55 (61) 98431-7466</a></p>
+        </div>
+        <div>
+          <h4 class="text-white font-semibold mb-3">Legal</h4>
+          <div class="flex flex-col gap-2 text-sm">
+            <a href="#" class="hover:text-white">Termos de Uso</a>
+            <a href="#" class="hover:text-white">Política de Privacidade</a>
+            <a href="#" class="hover:text-white">LGPD</a>
+          </div>
+        </div>
+      </div>
+      <div class="border-t border-slate-800 pt-6 flex flex-col sm:flex-row items-center justify-between gap-4">
+        <p class="text-sm">© <span id="year"></span> SWAY Brasil. Todos os direitos reservados.</p>
+        <div class="flex gap-4 text-sm">
+          <a href="https://www.instagram.com/sway_brasil/" target="_blank" class="hover:text-white">Instagram</a>
+        </div>
       </div>
     </div>
   </footer>
 
+  <!-- Botão Fixo de CTA -->
+  <div id="fixedCTA" class="fixed bottom-6 right-6 z-50 hidden">
+    <a href="https://api.whatsapp.com/send/?phone=556198431746&text=Ol%C3%A1%2C%20quero%20agendar%20uma%20conversa%20com%20especialista%20sobre%20a%20SWAY&type=phone_number&app_absent=0" target="_blank" class="cta-button flex items-center gap-2 px-6 py-3 rounded-full bg-primary-600 text-white hover:bg-primary-700 shadow-2xl font-semibold transition-all animate-pulse" data-event="whatsapp_click" data-context="fixed_button">
+      <span>💬</span>
+      <span>Falar agora</span>
+    </a>
+  </div>
+
+  <script src="app.js"></script>
   <script>
     // util: ano
     document.getElementById('year').textContent = new Date().getFullYear();
@@ -306,12 +416,14 @@
       })
     });
 
-    // GTM event de clique nos planos (opcional)
-    document.querySelectorAll('[data-plan]')?.forEach(el => {
-      el.addEventListener('click', () => {
-        const plan = el.getAttribute('data-plan');
-        try { gtag('event', 'select_plan', { plan }); } catch(_) {}
-      });
+    // Botão fixo aparece após scroll
+    const fixedCTA = document.getElementById('fixedCTA');
+    let scrolled = false;
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 300 && !scrolled) {
+        fixedCTA.classList.remove('hidden');
+        scrolled = true;
+      }
     });
   </script>
 </body>
