fix: atualiza CNPJ no footer

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <div>
           <h4 class="text-white font-semibold mb-3">SWAY Brasil</h4>
           <p class="text-sm text-slate-400">Soluções de atendimento com IA vertical para empresas brasileiras.</p>
-          <p class="text-sm text-slate-500 mt-2">CNPJ: [Seu CNPJ]</p>
+          <p class="text-sm text-slate-500 mt-2">CNPJ: 62.557.381/0001-61</p>
           <p class="text-sm text-slate-500">Brasil • São Paulo, SP</p>
         </div>
         <div>
