--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
         <div>
           <h4 class="text-white font-semibold mb-3">Legal</h4>
           <div class="flex flex-col gap-2 text-sm">
-            <a href="#" class="hover:text-white">Termos de Uso</a>
-            <a href="#" class="hover:text-white">Política de Privacidade</a>
-            <a href="#" class="hover:text-white">LGPD</a>
+            <a href="/termos.html" class="hover:text-white">Termos de Uso</a>
+            <a href="/privacidade.html" class="hover:text-white">Política de Privacidade</a>
+            <a href="/privacidade.html#7" class="hover:text-white">LGPD</a>
           </div>
         </div>
       </div>
