fix: ajusta texto da hero section para versão mais direta

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-20 lg:py-28">
       <div class="flex flex-col items-center text-center">
         <h1 class="text-3xl sm:text-5xl font-extrabold tracking-tight text-slate-900 max-w-3xl">Atendimento inteligente com <span class="text-primary-600">IAs Verticais</span></h1>
-        <p class="mt-5 text-lg text-slate-600 max-w-2xl">Transforme sua operação de atendimento com IAs que nunca se cansam, podem atender milhares de clientes simultaneamente e garantem agilidade em cada interação. Sua equipe foca no que importa: resolver casos estratégicos e fechar mais negócios.</p>
+        <p class="mt-5 text-lg text-slate-600 max-w-2xl">Transforme sua operação com IAs que trabalham 24h, sem pausa e sempre prontas pra atender.</p>
         
         <!-- Seção Interativa: Demonstração rápida -->
         <div class="mt-10 w-full max-w-2xl">
