refactor: reorganiza estrutura do projeto para backend futuro mantendo compatibilidade GitHub Pages
- Cria estrutura de pastas organizada (public/, api/, backend/)
- Move assets para public/assets/ (css, js, img)
- Move páginas legais para public/pages/
- Mantém HTMLs principais na raiz para GitHub Pages
- Atualiza todos os paths relativos nos arquivos
- Adiciona .gitignore e documentação (PROJECT_STRUCTURE.md)
- Cria READMEs em cada pasta explicando estrutura
- Projeto pronto para implementação de backend sem quebrar GitHub Pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     "@type": "Organization",
     "name": "SWAY Brasil",
     "url": "https://swaybrasil.com",
-    "logo": "https://swaybrasil.com/img/logo-sway.png",
+      "logo": "https://swaybrasil.com/public/assets/img/logo-sway.png",
     "description": "Soluções de atendimento com IA vertical para empresas brasileiras",
     "address": {
       "@type": "PostalAddress",
@@ -54,11 +54,11 @@
 
   <!-- FAVICONS (mais completo + cache busting) -->
   <link rel="icon" href="/favicon.ico?v=3">
-  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16.png?v=3">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32.png?v=3">
-  <link rel="icon" type="image/png" sizes="192x192" href="./img/sway_logo-192.png?v=3">
-  <link rel="icon" type="image/png" sizes="512x512" href="./img/sway_logo-512.png?v=3">
-  <link rel="apple-touch-icon" sizes="180x180" href="./img/sway_logo-180.png?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/img/favicon-16.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="./public/assets/img/favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="192x192" href="./public/assets/img/sway_logo-192.png?v=3">
+  <link rel="icon" type="image/png" sizes="512x512" href="./public/assets/img/sway_logo-512.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="./public/assets/img/sway_logo-180.png?v=3">
   <!-- Opcional para Safari pinned tabs (adicione o arquivo e descomente): -->
   <!-- <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#2f8cff"> -->
   <meta name="theme-color" content="#2f8cff">
@@ -375,9 +375,9 @@
         <div>
           <h4 class="text-white font-semibold mb-3">Legal</h4>
           <div class="flex flex-col gap-2 text-sm">
-            <a href="/termos.html" class="hover:text-white">Termos de Uso</a>
-            <a href="/privacidade.html" class="hover:text-white">Política de Privacidade</a>
-            <a href="/privacidade.html#7" class="hover:text-white">LGPD</a>
+            <a href="./termos.html" class="hover:text-white">Termos de Uso</a>
+            <a href="./privacidade.html" class="hover:text-white">Política de Privacidade</a>
+            <a href="./privacidade.html#7" class="hover:text-white">LGPD</a>
           </div>
         </div>
       </div>
@@ -398,7 +398,7 @@
     </a>
   </div>
 
-  <script src="app.js"></script>
+  <script src="./public/assets/js/app.js"></script>
   <script>
     // util: ano
     document.getElementById('year').textContent = new Date().getFullYear();
