fix: remove pasta public antiga e corrige paths na raiz para frontend/

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     "@type": "Organization",
     "name": "SWAY Brasil",
     "url": "https://swaybrasil.com",
-      "logo": "https://swaybrasil.com/assets/img/logo-sway.png",
+      "logo": "https://swaybrasil.com/frontend/src/assets/img/logo-sway.png",
     "description": "Soluções de atendimento com IA vertical para empresas brasileiras",
     "address": {
       "@type": "PostalAddress",
@@ -54,11 +54,11 @@
 
   <!-- FAVICONS (mais completo + cache busting) -->
   <link rel="icon" href="/favicon.ico?v=3">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16.png?v=3">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32.png?v=3">
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/img/sway_logo-192.png?v=3">
-  <link rel="icon" type="image/png" sizes="512x512" href="./assets/img/sway_logo-512.png?v=3">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/sway_logo-180.png?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="./frontend/src/assets/img/favicon-16.png?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="./frontend/src/assets/img/favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="192x192" href="./frontend/src/assets/img/sway_logo-192.png?v=3">
+  <link rel="icon" type="image/png" sizes="512x512" href="./frontend/src/assets/img/sway_logo-512.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="./frontend/src/assets/img/sway_logo-180.png?v=3">
   <!-- Opcional para Safari pinned tabs (adicione o arquivo e descomente): -->
   <!-- <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#2f8cff"> -->
   <meta name="theme-color" content="#2f8cff">
@@ -398,7 +398,7 @@
     </a>
   </div>
 
-  <script src="./assets/js/app.js"></script>
+  <script src="./frontend/src/assets/js/app.js"></script>
   <script>
     // util: ano
     document.getElementById('year').textContent = new Date().getFullYear();
