feat: atualiza meta title e description para Google Search
- Title: SWAY • O jeito mais fácil de atender seus clientes com Inteligência Artificial
- Description: Atenda seus clientes de forma fácil: use IA para responder rápido e mude para o atendimento humano em 1 clique. Tudo em um só lugar, com histórico e relatórios simples de entender.
- Atualiza Open Graph e Twitter Cards com novas informações

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IA de Atendimento Vertical | SWAY Brasil - Chatbot Inteligente para Empresas</title>
-  <meta name="description" content="IA de atendimento vertical especializada para clínicas, escritórios de advocacia e vendas no Brasil. Chatbot inteligente 24/7, WhatsApp Business API, handover automático. Reduza 70% da carga operacional. Teste grátis." />
+  <title>SWAY • O jeito mais fácil de atender seus clientes com Inteligência Artificial</title>
+  <meta name="description" content="Atenda seus clientes de forma fácil: use IA para responder rápido e mude para o atendimento humano em 1 clique. Tudo em um só lugar, com histórico e relatórios simples de entender." />
   <meta name="keywords" content="IA atendimento, chatbot inteligente, atendimento automatizado, WhatsApp Business API, IA vertical, chatbot para clínicas, atendimento jurídico IA, automação vendas, CRM inteligente, agente virtual, assistente virtual, atendimento 24h, handover automático, Brasil, DF, Brasília" />
   <meta name="author" content="SWAY Brasil" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -14,8 +14,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://swaybrasil.com" />
-  <meta property="og:title" content="IA de Atendimento Vertical | SWAY Brasil - Chatbot Inteligente" />
-  <meta property="og:description" content="IA especializada para clínicas, advocacia e vendas. Chatbot 24/7, WhatsApp Business API, handover automático. Reduza 70% da carga operacional." />
+  <meta property="og:title" content="SWAY • O jeito mais fácil de atender seus clientes com Inteligência Artificial" />
+  <meta property="og:description" content="Atenda seus clientes de forma fácil: use IA para responder rápido e mude para o atendimento humano em 1 clique. Tudo em um só lugar, com histórico e relatórios simples de entender." />
   <meta property="og:image" content="https://swaybrasil.com/frontend/src/assets/img/sway_logo-512.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -25,8 +25,8 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://swaybrasil.com" />
-  <meta name="twitter:title" content="IA de Atendimento Vertical | SWAY Brasil" />
-  <meta name="twitter:description" content="Chatbot inteligente 24/7 para empresas brasileiras. WhatsApp Business API, handover automático. Reduza 70% da carga operacional." />
+  <meta name="twitter:title" content="SWAY • O jeito mais fácil de atender seus clientes com IA" />
+  <meta name="twitter:description" content="Atenda seus clientes de forma fácil: use IA para responder rápido e mude para o atendimento humano em 1 clique. Tudo em um só lugar." />
   <meta name="twitter:image" content="https://swaybrasil.com/frontend/src/assets/img/sway_logo-512.png" />
 
   <!-- Schema.org para SEO -->
