--- a/index.html
+++ b/index.html
@@ -126,6 +126,21 @@
   <!-- <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#2f8cff"> -->
   <meta name="theme-color" content="#2f8cff">
 
+  <!-- Meta Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '807999098801566');
+  fbq('track', 'PageView');
+  </script>
+  <!-- End Meta Pixel Code -->
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVM8FMFR8R"></script>
   <script>
@@ -159,6 +174,13 @@
   </style>
 </head>
 <body class="bg-slate-50 text-slate-800">
+  <!-- Meta Pixel (noscript) -->
+  <noscript>
+    <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=807999098801566&ev=PageView&noscript=1"
+    />
+  </noscript>
+
   <!-- GTM noscript -->
   <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=G-CVM8FMFR8R" height="0" width="0" style="display:none;visibility:hidden"></iframe>
